--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header class="topbar">
 <div class="titles">
 <div class="title-badge">
-<span class="app-title">Artystyczne motywacje</span>
+<span class="app-title">artystyczne motywacje</span>
 </div>
 <div id="dateLabel"></div>
 </div>
